--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Trybewarts</title>
   </head>
   <body>
+    <header class="header">
+     
+    </header>
 
     <script src="script.js"></script>
   </body>
