--- a/index.html
+++ b/index.html
@@ -4,13 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <title>Trybewarts</title>
   </head>
   <body>
     <header class="header">
-      <img src="images/trybewarts-header-logo.svg" alt="Logo Trybewarts" class="trybewarts-header-logo">
+      <img
+        src="images/trybewarts-header-logo.svg"
+        alt="Logo Trybewarts"
+        class="trybewarts-header-logo"
+      />
+      <form class="trybewarts-login">
+        <div class="container-email">
+          <i class="fa-solid fa-envelope" id="icon-email"></i>
+          <input type="email" name="email" id="input-email" placeholder="Email" />
+        </div>
+        <div class="container-password">
+          <i class="fa-solid fa-lock" id="icon-password"></i>
+          <input type="password" name="password" id="input-password" placeholder="Senha" />
+        </div>
+        <button type="submit" id="btn-entrar">Entrar</button>
+      </form>
+      
     </header>
 
     <script src="script.js"></script>
+    
+    <script src="https://kit.fontawesome.com/1b3b36e600.js" crossorigin="anonymous"></script>
   </body>
 </html>
