--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         alt="Logo Trybewarts"
         class="trybewarts-header-logo"
       />
+      <h1 id="trybewarts-header-title">Trybewarts</h1>
       <form class="trybewarts-login">
         <div class="container-email">
           <i class="fa-solid fa-envelope" id="icon-email"></i>
