:sparkles: feat: Requisito 05

--- a/index.html
+++ b/index.html
@@ -23,19 +23,36 @@
       <form class="trybewarts-login">
         <div class="container-email">
           <i class="fa-solid fa-envelope" id="icon-email"></i>
-          <input type="email" name="email" id="input-email" placeholder="Email" />
+          <input
+            type="email"
+            name="email"
+            id="input-email"
+            placeholder="Email"
+          />
         </div>
         <div class="container-password">
           <i class="fa-solid fa-lock" id="icon-password"></i>
-          <input type="password" name="password" id="input-password" placeholder="Senha" />
+          <input
+            type="password"
+            name="password"
+            id="input-password"
+            placeholder="Senha"
+          />
         </div>
         <button type="submit" id="btn-entrar">Entrar</button>
       </form>
-      
     </header>
 
+    <main class="main">
+      <form id="evaluation-form">
+    </main>
+
+    </form>
+
     <script src="script.js"></script>
-    
-    <script src="https://kit.fontawesome.com/1b3b36e600.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/1b3b36e600.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
