--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
     </header>
 
     <main class="main">
-      <form id="evaluation-form">
+      <form id="evaluation-form"></form>
+      <img
+        src="images/trybewarts-colored.svg"
+        alt="Logo Trybewarts"
+        id="trybewarts-forms-logo"
+      />
     </main>
-
-    </form>
 
     <script src="script.js"></script>
     <script
