:sparkles: feat: Requisito 08

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <input
             type="email"
             name="email"
-            id="input-email"
+            id="input-email-header"
             placeholder="Email"
           />
         </div>
@@ -35,7 +35,7 @@
           <input
             type="password"
             name="password"
-            id="input-password"
+            id="input-password-header"
             placeholder="Senha"
           />
         </div>
@@ -44,7 +44,12 @@
     </header>
 
     <main class="main">
-      <form id="evaluation-form"></form>
+      <form id="evaluation-form">
+        <h1 id="trybewarts-main-title">Formulário de Avaliação</h1>
+        <input type="text" name="name-main" id="input-name" placeholder="Nome">
+        <input type="text" name="lastname-main" id="input-lastname" placeholder="Sobrenome">
+        <input type="email" name="email-main" id="input-email" placeholder="Email">
+      </form>
       <img
         src="images/trybewarts-colored.svg"
         alt="Logo Trybewarts"
