:sparkles: feat: Requisito 09

--- a/index.html
+++ b/index.html
@@ -46,9 +46,31 @@
     <main class="main">
       <form id="evaluation-form">
         <h1 id="trybewarts-main-title">Formulário de Avaliação</h1>
-        <input type="text" name="name-main" id="input-name" placeholder="Nome">
-        <input type="text" name="lastname-main" id="input-lastname" placeholder="Sobrenome">
-        <input type="email" name="email-main" id="input-email" placeholder="Email">
+        <input
+          type="text"
+          name="name-main"
+          id="input-name"
+          placeholder="Nome"
+        />
+        <input
+          type="text"
+          name="lastname-main"
+          id="input-lastname"
+          placeholder="Sobrenome"
+        />
+        <input
+          type="email"
+          name="email-main"
+          id="input-email"
+          placeholder="Email"
+        />
+        <label for="house">Casa:</label>
+        <select name="house" id="house">
+          <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+          <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+          <option value="Corvinode" id="corvinode-house">Corvinode</option>
+          <option value="Pytherina" id="pytherina-house">Pytherina</option>
+        </select>
       </form>
       <img
         src="images/trybewarts-colored.svg"
