:sparkles: feat: Requisito 10

--- a/index.html
+++ b/index.html
@@ -46,18 +46,20 @@
     <main class="main">
       <form id="evaluation-form">
         <h1 id="trybewarts-main-title">Formulário de Avaliação</h1>
-        <input
-          type="text"
-          name="name-main"
-          id="input-name"
-          placeholder="Nome"
-        />
-        <input
-          type="text"
-          name="lastname-main"
-          id="input-lastname"
-          placeholder="Sobrenome"
-        />
+        <div class="name-lastname">
+          <input
+            type="text"
+            name="name-main"
+            id="input-name"
+            placeholder="Nome"
+          />
+          <input
+            type="text"
+            name="lastname-main"
+            id="input-lastname"
+            placeholder="Sobrenome"
+          />
+        </div>
         <input
           type="email"
           name="email-main"
