--- a/index.html
+++ b/index.html
@@ -60,19 +60,21 @@
             placeholder="Sobrenome"
           />
         </div>
-        <input
-          type="email"
-          name="email-main"
-          id="input-email"
-          placeholder="Email"
-        />
-        <label for="house">Casa:</label>
-        <select name="house" id="house">
-          <option value="Gitnória" id="gitnoria-house">Gitnória</option>
-          <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
-          <option value="Corvinode" id="corvinode-house">Corvinode</option>
-          <option value="Pytherina" id="pytherina-house">Pytherina</option>
-        </select>
+        <div class="email-house">
+          <input
+            type="email"
+            name="email-main"
+            id="input-email"
+            placeholder="Email"
+          />
+          <label for="house">Casa:</label>
+          <select name="house" id="house">
+            <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+            <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+            <option value="Corvinode" id="corvinode-house">Corvinode</option>
+            <option value="Pytherina" id="pytherina-house">Pytherina</option>
+          </select>
+        </div>
       </form>
       <img
         src="images/trybewarts-colored.svg"
