:sparkles: feat: Requisito 14

--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@
                 <label for="frontend">Família Frontend</label>
               </div>
               <div id="back-tech">
-                <input type="radio" name="family" value="Backend" id="backend" />
+                <input
+                  type="radio"
+                  name="family"
+                  value="Backend"
+                  id="backend"
+                />
                 <label for="backend">Família Backend</label>
               </div>
               <div id="full-tech">
@@ -105,28 +110,85 @@
             </div>
           </div>
           <div class="container-label-content">
-            <label for="" id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
+            <label for="" id="label-content"
+              >Qual conteúdo você está com mais vontade de aprender?</label
+            >
             <div class="checks-content">
               <div class="hof-jest-promises">
-                <input type="checkbox" name="hofs" id="hofs" value="HoFs">
+                <input type="checkbox" name="hofs" id="hofs" value="HoFs" />
                 <label for="hofs">HoFs</label>
-                <input type="checkbox" name="jest" id="jest" value="Jest">
+                <input type="checkbox" name="jest" id="jest" value="Jest" />
                 <label for="jest">Jest</label>
-                <input type="checkbox" name="promises" id="promises" value="Promises">
+                <input
+                  type="checkbox"
+                  name="promises"
+                  id="promises"
+                  value="Promises"
+                />
                 <label for="promises">Promises</label>
               </div>
               <div class="react-sql-python">
-                <input type="checkbox" name="react" id="react" value="React">
+                <input type="checkbox" name="react" id="react" value="React" />
                 <label for="react">React</label>
-                <input type="checkbox" name="sql" id="sql" value="SQL">
+                <input type="checkbox" name="sql" id="sql" value="SQL" />
                 <label for="sql">SQL</label>
-                <input type="checkbox" name="python" id="python" value="Python">
+                <input
+                  type="checkbox"
+                  name="python"
+                  id="python"
+                  value="Python"
+                />
                 <label for="python">Python</label>
               </div>
             </div>
           </div>
         </div>
         <div class="linha"></div>
+        <div class="container-evaluation">
+          <div class="label-eval">
+            <label for="label-rate" id="label-rate">Como você avalia a Trybewarts?</label>
+          </div>
+          <div id="one">
+            <input type="radio" name="rate" id="one" value="1" />
+            <label for="one">1</label>
+          </div>
+          <div id="dois">
+            <input type="radio" name="rate" id="dois" value="2" />
+            <label for="dois">2</label>
+          </div>
+          <div id="tres">
+            <input type="radio" name="rate" id="tres" value="3" />
+            <label for="tres">3</label>
+          </div>
+          <div id="quatro">
+            <input type="radio" name="rate" id="quatro" value="4" />
+            <label for="quatro">4</label>
+          </div>
+          <div id="cinco">
+            <input type="radio" name="rate" id="cinco" value="5" />
+            <label for="cinco">5</label>
+          </div>
+          <div id="seis">
+            <input type="radio" name="rate" id="seis" value="6" />
+            <label for="seis">6</label>
+          </div>
+          <div id="sete">
+            <input type="radio" name="rate" id="sete" value="7" />
+            <label for="sete">7</label>
+          </div>
+          <div id="oito">
+            <input type="radio" name="rate" id="oito" value="8" />
+            <label for="oito">8</label>
+          </div>
+          <div id="nove">
+            <input type="radio" name="rate" id="nove" value="9" />
+            <label for="nove">9</label>
+          </div>
+          <div id="dez">
+            <input type="radio" name="rate" id="dez" value="10" />
+            <label for="dez">10</label>
+          </div>
+        </div>
       </form>
       <img
         src="images/trybewarts-colored.svg"
