:sparkles: feat: Requisito 15

--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
             <label for="dez">10</label>
           </div>
         </div>
+          <label for="comments" class="textarea">Deixe seu comentário:</label>
+        <textarea name="comments" id="comments" cols="74" rows="6" maxlength="500"></textarea>
       </form>
       <img
         src="images/trybewarts-colored.svg"
