:sparkles: feat: Requisito 16

--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
         <div class="linha"></div>
         <div class="container-evaluation">
           <div class="label-eval">
-            <label for="label-rate" id="label-rate">Como você avalia a Trybewarts?</label>
+            <label for="label-rate" id="label-rate"
+              >Como você avalia a Trybewarts?</label
+            >
           </div>
           <div id="one">
             <input type="radio" name="rate" id="one" value="1" />
@@ -189,8 +191,18 @@
             <label for="dez">10</label>
           </div>
         </div>
-          <label for="comments" class="textarea">Deixe seu comentário:</label>
-        <textarea name="comments" id="comments" cols="74" rows="6" maxlength="500"></textarea>
+        <label for="comments" class="textarea">Deixe seu comentário:</label>
+        <textarea
+          name="comments"
+          id="comments"
+          cols="74"
+          rows="6"
+          maxlength="500"
+        ></textarea>
+        <div id="info-check">
+          <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
+          <input type="checkbox" name="" id="agreement">
+        </div>
       </form>
       <img
         src="images/trybewarts-colored.svg"
