--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
           <input type="checkbox" name="" id="agreement">
         </div>
-        <button type="submit" id="submit-btn" class="">Enviar</button>
+        <button type="submit" id="submit-btn" disabled>Enviar</button>
       </form>
       <img
         src="images/trybewarts-colored.svg"
