--- a/index.html
+++ b/index.html
@@ -196,12 +196,14 @@
           name="comments"
           id="comments"
           cols="74"
-          rows="6"
+          rows="4"
           maxlength="500"
         ></textarea>
         <div id="info-check">
-          <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
-          <input type="checkbox" name="" id="agreement">
+          <label for="agreement" id="label-infos"
+            >Você concorda com o uso das informações acima?</label
+          >
+          <input type="checkbox" name="" id="agreement" />
         </div>
         <button type="submit" id="submit-btn" disabled>Enviar</button>
       </form>
@@ -211,6 +213,7 @@
         id="trybewarts-forms-logo"
       />
     </main>
+    <footer>Direitos reservados à Trybewarts©</footer>
 
     <script src="script.js"></script>
     <script
