:sparkles: feat: Requisito 20

--- a/index.html
+++ b/index.html
@@ -191,14 +191,17 @@
             <label for="dez">10</label>
           </div>
         </div>
-        <label for="comments" class="textarea">Deixe seu comentário:</label>
-        <textarea
-          name="comments"
-          id="comments"
-          cols="74"
-          rows="4"
-          maxlength="500"
-        ></textarea>
+        <div class="container-textarea">
+          <label for="textarea" class="textarea">Deixe seu comentário:</label>
+          <textarea
+            name="textarea"
+            id="textarea"
+            cols="65"
+            rows="4"
+            maxlength="500"
+          ></textarea>
+          <div id="counter">500</div>
+        </div>
         <div id="info-check">
           <label for="agreement" id="label-infos"
             >Você concorda com o uso das informações acima?</label
